compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__imports__unqualified_using_private_function.snap
---
source: compiler-core/src_refactored/__core/type_/tests/imports.rs
assertion_line: 187
expression: "import one.{two}\n\npub fn main() {\n  two\n}"
snapshot_kind: text
---
----- SOURCE CODE
-- one.gleam
fn two() { 2 }

-- main.gleam
import one.{two}

pub fn main() {
  two
}

----- ERROR
error: Unknown module value
  ┌─ /src/one/two.gleam:1:13
  │
1 │ import one.{two}
  │             ^^^

The module `one` does not have a `two` value.

error: Unknown variable
  ┌─ /src/one/two.gleam:4:3
  │
4 │   two
  │   ^^^

The name `two` is not in scope here.
